@@ -104,12 +104,12 @@ void IndexHTMLWriter::WriteEntries(QStandardItem *parent_item)
             // If the entry has no children then its a target id.
             if (item->child(j, 0)->rowCount() == 0) {
                 QString target = "../Text/" % item->child(j, 0)->text();
+                if (ref_count > 1) {
+                    m_IndexHTMLFile += ", ";
+                }
                 m_IndexHTMLFile += "<a href=\"" % target % "\">" % QString::number(ref_count) % "</a>";
                 ref_count++;
     
-                if (j < item->rowCount() - 1) {
-                    m_IndexHTMLFile += ", ";
-                }
             }
         }
 
